--- a/catalog.html
+++ b/catalog.html
@@ -105,6 +105,7 @@
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="/catalog.html" class="nav-link text-secondary-dark hover:text-accent font-medium transition-colors">Catalog</a>
                     <a href="/about.html" class="nav-link text-secondary-dark hover:text-accent font-medium transition-colors">About</a>
+                    <a href="/landing.html#contact" class="nav-link text-secondary-dark hover:text-accent font-medium transition-colors">Contact</a>
                 </div>
                 <!-- Hamburger -->
                 <button id="mobile-menu-button" class="md:hidden text-secondary-dark focus:outline-none" aria-label="Open menu">
@@ -119,6 +120,7 @@
             <div class="px-4 py-4 flex flex-col space-y-2">
                 <a href="/catalog.html" class="block px-3 py-2 rounded-md text-base font-medium text-secondary-dark hover:bg-primary-light hover:text-accent transition-colors">Catalog</a>
                 <a href="/about.html" class="block px-3 py-2 rounded-md text-base font-medium text-secondary-dark hover:bg-primary-light hover:text-accent transition-colors">About</a>
+                <a href="/landing.html#contact" class="block px-3 py-2 rounded-md text-base font-medium text-secondary-dark hover:bg-primary-light hover:text-accent transition-colors">Contact</a>
             </div>
         </div>
     </nav>
